# dice_algebra_calculator_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  dice_exception.hpp  iterator.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  random.hpp
tests/: CMakeLists.txt  iterator_test.cpp  lexer_test.cpp  parser_test.cpp
